--- a/src/styles.css
+++ b/src/styles.css
@@ -1,43 +1,72 @@
-h1 { 
+h1 {
 	text-decoration: underline;
 	text-decoration-color: #5e91f0;
+	text-align: center;
 }
-.create-button, .create-new {
+
+.create-button,
+.create-new {
 	border-radius: 5px;
 	border-width: 1px;
 	border-color: #5e91f0;
 	background-color: #5e91f0;
 	color: white;
+	display: inline-block;
+	margin: 5px;
 }
+
 #id {
-    border-width: 0px;
+	border-width: 0px;
 }
+
 label {
-    font-weight: bold;
+	font-weight: bold;
 	font-size: 18px;
 }
+
+.wrapper label,
+input,
+textarea {
+	display: flex;
+	
+}
+
 .icon-font-size {
-    font-size: 18px;
-	color:#5e91f0;
+	font-size: 18px;
+	color: #5e91f0;
 	background-color: transparent;
 	border: none;
 }
 
 .item-container {
 	display: flex;
-    flex-direction: column;
+	flex-direction: column;
 	width: 18%;
+	margin: auto;
 }
 
 .item {
 	display: flex;
-    flex-direction: row;
-    align-items: center;
+	flex-direction: row;
+	align-items: center;
 }
 
 .item .item-name {
 	flex-grow: 1;
 	text-overflow: ellipsis;
-    overflow: hidden;
+	overflow: hidden;
 	white-space: nowrap;
+}
+
+.wrapper {
+	
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
+}
+
+.wrapper div {
+	width: 200px;
 }
